name:                cap
version:             0.1.0.0
author:              Juan Edi
maintainer:          jedi@dc.uba.ar
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Util,
                       Fallible,
                       Substitution,
                       Type,
                       Type.MUType,
                       Type.Equivalence,
                       Type.Subtyping,
                       Term,
                       Term.Compatibility,
                       Typechecker
  other-extensions:    FlexibleInstances
  build-depends:       base       >=4.6 && <4.7
               ,       containers >=0.5 && <0.6
               ,       mtl        ==2.2.1
  default-language:    Haskell2010

test-suite unfolding-test
  ghc-options: -Wall
  -- default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: UnfoldingTests.hs
  build-depends:       base,
                       cap,
                       containers >=0.5 && <0.6,
                       HUnit >=1.2 && <1.3,
                       hspec                >= 1.8,
                       hspec-contrib        >= 0.2.2
  default-language:    Haskell2010

test-suite equivalence-test
  ghc-options: -Wall
  -- default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: EquivalenceTests.hs
  build-depends:       base,
                       cap,
                       containers >=0.5 && <0.6,
                       HUnit >=1.2 && <1.3,
                       hspec                >= 1.8,
                       hspec-contrib        >= 0.2.2
  default-language:    Haskell2010

test-suite subtyping-test
  ghc-options: -Wall
  -- default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: SubtypingTests.hs
  build-depends:       base,
                       cap,
                       containers >=0.5 && <0.6,
                       HUnit >=1.2 && <1.3,
                       hspec                >= 1.8,
                       hspec-contrib        >= 0.2.2
  default-language:    Haskell2010

test-suite compatibility-test
  ghc-options: -Wall
  -- default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: CompatibilityTest.hs
  build-depends:       base,
                       cap,
                       containers >=0.5 && <0.6,
                       HUnit >=1.2 && <1.3,
                       hspec                >= 1.8,
                       hspec-contrib        >= 0.2.2
  default-language:    Haskell2010

test-suite typechecker-test
  ghc-options: -Wall
  -- default-extensions:  OverloadedStrings
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: TypecheckerTest.hs
  build-depends:       base,
                       cap,
                       containers >=0.5 && <0.6,
                       HUnit >=1.2 && <1.3,
                       hspec                >= 1.8,
                       hspec-contrib        >= 0.2.2
  default-language:    Haskell2010